[package]
name = "time"
authors = ["Seungjin Kim <seungjin@duck.com>"]
description = ""
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
chrono = { version = "0.4.40", features = ["serde"] }
chrono-tz = "0.10.3"
# General-purpose crate with common HTTP types.
http = "0.2"
percent-encoding = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
# The Spin SDK.
spin-sdk = { git = "https://github.com/spinframework/spin-rust-sdk", branch = "main" }

[workspace]
